force-app/main/default/objects/custom_create1__c/custom_create1__c.object-meta.xml
<CustomObject>
    <label>Custom created object1</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>