force-app/main/default/objects/custom_create1__c/fields/custom_create_1field628__c.field-meta.xml
<CustomField>
    <fullName>custom_create_1field628__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 1field628</label>
    <type>Checkbox</type>
</CustomField>